--- a/src/style.css
+++ b/src/style.css
@@ -262,6 +262,7 @@ main {
   width: 100%;
   height: 42.5rem;
   top: 5rem;
+  bottom: 2.5rem !important;
   overflow-x: hidden;
   overflow-y: auto;
 }
