--- a/src/style.css
+++ b/src/style.css
@@ -23,9 +23,9 @@
   color: var(--color);
   --safe-top: env(safe-area-inset-top);
   --safe-bottom: env(safe-area-inset-bottom);
-  --usable-vh: calc((100vh - var(--safe-top) - var(--safe-bottom)) / 100);
+  --vh: calc((100svh - var(--safe-top) - var(--safe-bottom)) / 100);
+  font-size: calc(2 * var(--vh));
   --transition-duration: 666ms; /* Initialize variable for transition duration */
-  font-size: calc(2 * var(--usable-vh));
 }
 
 * ::selection {
@@ -138,7 +138,10 @@ html,
 body,
 #app {
   width: 100%;
-  height: 50rem;
+  /* height: 50rem; */
+  min-height: fit-content;
+  min-height: -moz-available;
+  min-height: -webkit-available;
   overflow: hidden;
 }
 
@@ -232,6 +235,10 @@ a:hover:after,
   -webkit-filter: blur(var(--blur));
 }
 
+#logoImage {
+  stroke: currentColor;
+}
+
 header a {
   flex-direction: column;
   padding: 0.5rem;
@@ -245,11 +252,7 @@ footer {
 }
 
 header {
-  height: 5.5rem;
-}
-
-#logoImage {
-  stroke: currentColor;
+  height: min(5.5rem, 20vmin);
 }
 
 header,
@@ -262,13 +265,13 @@ main {
   width: 100%;
   height: 42.5rem;
   top: 5rem;
-  bottom: 2.5rem !important;
   overflow-x: hidden;
   overflow-y: auto;
 }
 
 footer {
   height: 2.75rem;
+  height: min(2.75rem, 10vmin);
 }
 
 main::-webkit-scrollbar,
