--- a/src/style.css
+++ b/src/style.css
@@ -19,7 +19,7 @@
   --bg: #000;
   --bg-05: #0002;
   --bg-alt: #222;
-  --bg-img-op: 0.2;
+  --bg-img-op: 0.175;
   --color: #fff;
   --color-alt: #ddd;
   --shadow: #8888;
@@ -37,16 +37,13 @@
   --blur-img: 0.5px;
   --blur-drop: 0.142857rem;
   --tr-dur: 666ms; /* Initialize variable for transition duration */
-
   --safe-top: env(safe-area-inset-top);
   --safe-bottom: env(safe-area-inset-bottom);
   --vh: calc((100svh - var(--safe-top) - var(--safe-bottom)) / 100);
-
   font-size: min(calc(2 * var(--vh)), calc(20 / 5.5 * 1vmin));
-
   --main-h: calc(100svh - 2.75rem - 5.5rem);
-  --main-cent: calc(var(--main-h) / 100);
-  --main-em: calc(var(--main-h) / 41.75);
+  --main-cent: calc((100svh - 2.75rem - 5.5rem) / 100);
+  --main-em: calc((100svh - 2.75rem - 5.5rem) / 41.75);
 }
 
 * ::selection {
@@ -66,7 +63,7 @@
 
 * {
   box-sizing: border-box; /* Ensures consistent box sizing across all elements */
-  font-family: 'Sanserifing'; /* Sets the font family for all text */
+  font-family: 'Sanserifing', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; /* Sets the font family for all text */
   line-height: 100%; /* Sets the line height */
   font-optical-sizing: auto; /* Enables font-optical sizing for better rendering */
   scroll-behavior: smooth; /* Enables smooth scrolling */
@@ -175,20 +172,22 @@ body::after {
   }
 }
 
+body,
+#app {
+  width: 100%;
+  height: calc(var(--vh) * 100);
+  min-height: calc(var(--vh) * 100);
+  overflow: hidden;
+  overscroll-behavior: none;
+}
+
 #app {
   flex-direction: column;
   text-align: center;
-  width: 100%;
-}
-
-#app:has(:focus) {
-  height: 100dvh;
-}
-
-#app:not(:has(:focus)) {
-  min-height: fit-content;
+  /* min-height: fit-content;
   min-height: -moz-available;
   min-height: -webkit-available;
+  min-height: -webkit-fill-available; */
 }
 
 header,
@@ -210,10 +209,8 @@ header {
 main {
   top: 5.5rem;
   width: 100%;
-  --main-h: calc(100svh - 2.75rem - 5.5rem);
-  --main-cent: calc(var(--main-h) / 100);
-  --main-em: calc(var(--main-h) / 41.75);
   height: var(--main-h);
+  min-height: var(--main-h);
   overflow-x: hidden;
   overflow-y: auto;
 }
