--- a/src/style.css
+++ b/src/style.css
@@ -5,7 +5,7 @@
   --color: #000;
   --color-alt: #222;
   --shadow: #8888;
-  --link-gradient: linear-gradient(45deg, var(--grey) 0%, transparent 25%, transparent 75%, var(--color-alt) 100%);
+  --gradient: linear-gradient(45deg, var(--grey) 0%, transparent 25%, transparent 75%, var(--color-alt) 100%);
   --cursor: url('https://1abcdesign.github.io/scissors-white.cur') 0 9,
             url('https://1abcdesign.github.io/scissors-white.ico') 0 9,
             url('https://1abcdesign.github.io/scissors-white.png') 0 9,
@@ -21,7 +21,7 @@
   --color: #fff;
   --color-alt: #ddd;
   --shadow: #8888;
-  --link-gradient: linear-gradient(45deg, var(--color-alt) 0%, transparent 25%, transparent 66%, var(--color-alt) 100%);
+  --gradient: linear-gradient(45deg, var(--color-alt) 0%, transparent 25%, transparent 66%, var(--color-alt) 100%);
   --cursor: url('https://1abcdesign.github.io/scissors-black.cur') 0 9,
                   url('https://1abcdesign.github.io/scissors-black.ico') 0 9,
                   url('https://1abcdesign.github.io/scissors-black.png') 0 9,
@@ -29,18 +29,6 @@
   background: #000;
   color: #fff;
 }
-
-/* @font-face {
-  font-family: "Sanserifing";
-  src: url("https://db.onlinewebfonts.com/t/1120bd063fd378d88dbeed72f19a8bde.eot");
-  src: url("https://db.onlinewebfonts.com/t/1120bd063fd378d88dbeed72f19a8bde.eot?#iefix")format("embedded-opentype"),
-  url("https://db.onlinewebfonts.com/t/1120bd063fd378d88dbeed72f19a8bde.woff2")format("woff2"),
-  url("https://db.onlinewebfonts.com/t/1120bd063fd378d88dbeed72f19a8bde.woff")format("woff"),
-  url("https://db.onlinewebfonts.com/t/1120bd063fd378d88dbeed72f19a8bde.ttf")format("truetype"),
-  url("https://db.onlinewebfonts.com/t/1120bd063fd378d88dbeed72f19a8bde.svg#Sanserifing")format("svg");
-
-  font-display: swap;
-} */
 
 :root {
   --grey: #808080;
@@ -241,7 +229,9 @@ a:not(.services-link):hover,
 .select,
 .theme-switcher,
 .theme-switcher:hover {
-  background: var(--link-gradient);
+  backdrop-filter: blur(1rem);
+  background-blend-mode: soft-light;
+  background: var(--gradient);
 }
 
 a.services-link:hover {
