--- a/src/style.css
+++ b/src/style.css
@@ -14,7 +14,7 @@
 }
 
 * {
-  text-shadow: 0 0 1.5px var(--gold);
+  text-shadow: 0 0 1.5px var(--metallic);
   box-sizing: border-box; /* Ensures consistent box sizing across all elements */
   font-family: 'Sanserifing', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; /* Sets the font family for all text */
   line-height: 100%; /* Sets the line height */
@@ -228,15 +228,17 @@ footer a:active {
 
 a.router-link-active,
 a:hover,
-.select,
-.theme-switcher {
-  box-shadow: 0 0 0.33rem 0.15rem var(--shadow);
+.lang-switcher,
+.theme-switcher,
+.color-switcher {
+  box-shadow: 0 0 0.1rem 0.05rem var(--shadow);
 }
 
 a.router-link-active::after,
 a:hover::after,
-.select::after,
-.theme-switcher::after {
+.lang-switcher::after,
+.theme-switcher::after,
+.color-switcher::after {
   position: absolute;
   top: 0;
   left: 0;
@@ -244,7 +246,7 @@ a:hover::after,
   width: 100%;
   min-width: fit-content;
   height: 100%;
-  box-shadow: inset 0 0 0.33rem 0.15rem var(--shadow);
+  box-shadow: inset 0 0 0.1rem 0.05rem var(--shadow);
   border-radius: inherit;
   -webkit-border-radius: inherit;
   -moz-border-radius: inherit;
@@ -262,11 +264,17 @@ a:hover::after,
   height: 2.5rem;
   stroke: var(--color);
   filter: blur(var(--blur-img));
-  -webkit-filter: blur(var(--blur-img)) drop-shadow(0 0 1px var(--gold));
+  -webkit-filter: blur(var(--blur-img)) drop-shadow(0 0 1px var(--metallic)) !important;
 }
 
 .bg-texture {
   backdrop-filter: blur(var(--blur-drop));
+  /* background: var(--semitransparent); */
+}
+
+:not(:has(.bg-texture)) {
+  filter: drop-shadow(0 0 0.05px var(--metallic-25));
+  -webkit-filter: drop-shadow(0 0 0.05px var(--metallic-25));
 }
 
 .box-shadow-1-05 {
