--- a/src/style.css
+++ b/src/style.css
@@ -14,7 +14,7 @@
 }
 
 * {
-  text-shadow: 0 0 1.5px var(--metallic);
+  /* text-shadow: 0 0 1.5px var(--metallic); */
   box-sizing: border-box; /* Ensures consistent box sizing across all elements */
   font-family: 'Sanserifing', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; /* Sets the font family for all text */
   line-height: 100%; /* Sets the line height */
