--- a/src/style.css
+++ b/src/style.css
@@ -14,7 +14,6 @@
 }
 
 * {
-  /* text-shadow: 0 0 1.5px var(--metallic); */
   box-sizing: border-box; /* Ensures consistent box sizing across all elements */
   font-family: 'Sanserifing', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; /* Sets the font family for all text */
   line-height: 100%; /* Sets the line height */
@@ -228,16 +227,14 @@ footer a:active {
 a.router-link-active,
 a:hover,
 .lang-switcher,
-.theme-switcher,
-.color-switcher {
+.theme-switcher {
   box-shadow: 0 0 0.1rem 0.05rem var(--shadow);
 }
 
 a.router-link-active::after,
 a:hover::after,
 .lang-switcher::after,
-.theme-switcher::after,
-.color-switcher::after {
+.theme-switcher::after {
   position: absolute;
   top: 0;
   left: 0;
@@ -254,27 +251,17 @@ a:hover::after,
   z-index: -1;
 }
 
-.moto {
-  cursor: var(--cursor);
-}
-
 .icon {
   width: 2.5rem;
   height: 2.5rem;
   stroke: var(--color);
   filter: blur(var(--blur-img));
-  -webkit-filter: blur(var(--blur-img)) drop-shadow(0 0 1px var(--metallic)) !important;
+  -webkit-filter: blur(var(--blur-img));
 }
 
 .bg-texture {
   backdrop-filter: blur(var(--blur-drop));
-  /* background: var(--semitransparent); */
 }
-
-/* :not(:has(.bg-texture)) {
-  filter: drop-shadow(0 0 0.05px var(--metallic-25));
-  -webkit-filter: drop-shadow(0 0 0.05px var(--metallic-25));
-} */
 
 .box-shadow-1-05 {
   box-shadow: 0 0 1rem 0.5rem var(--shadow);
